# services

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  build.sh  demo.sh  rust-toolchain.toml  test.sh  update-deps.sh  wkg.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml
components/: wkg.toml
components/credential-config/: Cargo.toml
components/filesystem-credential-admin/: Cargo.toml
components/filesystem-credential-store/: Cargo.toml
components/filesystem-lifecycle/: Cargo.toml
components/keyvalue-credential-admin/: Cargo.toml
components/keyvalue-credential-store/: Cargo.toml
components/lifecycle-host-cli/: Cargo.toml
components/lifecycle-host-http/: Cargo.toml
components/stub-client/: Cargo.toml
components/uuid-ids/: Cargo.toml
components/valkey-lifecycle/: Cargo.toml
components/webhook-credential-admin/: Cargo.toml
components/webhook-credential-store/: Cargo.toml
components/webhook-ids/: Cargo.toml
components/wit/: world.wit
samples/: wa8s-redis.yaml
tests/: cli.wac  host.wac  lifecycle.wac  logging.wac  ops.wac  wkg.toml
tests/filesystem-ops/: Cargo.toml
tests/keyvalue-ops/: Cargo.toml
tests/lifecycle-router/: Cargo.toml
tests/ops-router/: Cargo.toml
tests/service-cli/: Cargo.toml
tests/stub-credential-admin/: Cargo.toml
tests/stub-credential-store/: Cargo.toml
tests/stub-lifecycle/: Cargo.toml
tests/wit/: ops.wit  (+1 more)
wit/: credentials.wit  ids.wit  lifecycle.wit  ops.wit  types.wit  world.wit
(+24 files in other folders)
