[package]
name = "componentized-services"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace]
members = [
    "components/*",
    "tests/*",
]
exclude = [
    "components/wit",
    "tests/wit",
    "tests/testdata",
]

[workspace.dependencies]
chrono = { git = "https://github.com/chronotope/chrono.git", branch = "0.5.x" }
serde_json = "1.0"
wit-bindgen = "0.52.0"
